--- a/Lottie-Animation-Preview/src/index.html
+++ b/Lottie-Animation-Preview/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.9/lottie_html.min.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
